--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clicker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://tmeere.github.io/clicker",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
