--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "typography": "^0.16.19",
     "use-interval": "^1.1.0"
   },
   "scripts": {
